--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 :root {
     --primary-bg-color: #F7F1F0;
     --secondary-bg-color: #E5D7D3;
@@ -8,8 +7,35 @@
     --primary-btn-bg-color: #E5D7D3;
     --secondary-btn-bg-color: #5A3131;
    }
-   
-   
+
+   @font-face {
+    font-family: 'Helvetica Neue';
+    src: url('/fonts/HelveticaNeueMedium.otf') format('opentype');
+    font-weight: 400; /* Regular */
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Helvetica Neue';
+    src: url('/fonts/HelveticaNeueLight.otf') format('opentype');
+    font-weight: 300; /* Light */
+    font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('/fonts/HelveticaNeueThin.otf') format('opentype');
+  font-weight: 200; /* Light */
+}
+
+@font-face {
+    font-family: 'Helvetica Neue';
+    src: url('/fonts/HelveticaNeueBold.otf') format('opentype');
+    font-weight: 700; /* Bold */
+    font-style: normal;
+}
+
+
    * {
     margin: 0;
     padding: 0;
@@ -23,7 +49,6 @@
     scroll-behavior: smooth;
    }
    
-   
    body {
     font-family: 'Helvetica Neue', sans-serif;
     margin: 0;
@@ -34,7 +59,7 @@
     background-color: var(--primary-bg-color);
    }
    
-   
+ 
    /* typography */
    h1 {
     font-size: 55px;
@@ -68,6 +93,7 @@
     font-weight: 200;
     font-size: 16px;
     color: var(--primary-text-color);
+    font-family: 'Helvetica Neue', sans-serif;
    }
    
    
@@ -1101,7 +1127,6 @@
     background-color: rgba(0, 0, 0, 0.3);
    }
    
-   
    .recipe p {
     position: absolute;
     bottom: 0;
@@ -1112,13 +1137,9 @@
     color: #fff;
    }
    
-   
    .recipe:hover {
     transform: scale(1.05);
    }
-   
-   
-   
    
    @media (max-width: 480px) {
     .recipe-collection {
@@ -1212,6 +1233,7 @@
     align-items: center;
     border-bottom: 1px solid #ddd;
     text-align: left;
+    font-weight: 300;
    }
    
    
