--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ button {
   color: var(--primary-text-color);
   background-color: var(--primary-btn-bg-color);
   border: none;
+  font-weight: 300;
 }
 
 .primary-btn:hover {
@@ -1246,7 +1247,11 @@ footer {
   color: var(--tertiary-bg-color);
   background-color: var(--primary-btn-bg-color);
   border: none;
-  border-radius: 5px;
+  font-weight: 300;
+}
+
+.newsletter form button:hover{
+  background-color: var(--primary-bg-color);
 }
 
 .footer-bottom {
