--- a/css/style.css
+++ b/css/style.css
@@ -424,7 +424,7 @@ a:hover {
 @media (max-width: 485px) {
   .hero .content {
     transform: translateY(-50%);
-    padding: 70px;
+    padding-bottom: 70px;
   }
   .hero-products img {
     width: 800px;
@@ -441,6 +441,7 @@ a:hover {
   .hero .content {
     transform: translateY(-50%);
     padding-bottom: 70px;
+    padding-top: 75px;
   }
 
   .hero-products img {
